policies/l4-whitelist-reviews.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: whitelist-reviews-l4
  namespace: bookinfo-ambient-l4
spec:
  selector:
    matchLabels:
      app: reviews
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/bookinfo-ambient-l4/sa/bookinfo-productpage"]
